--- a/cw.css
+++ b/cw.css
@@ -96,3 +96,30 @@
     overflow-wrap: normal;
     margin-right: 5px;
 }
+
+.entry-content-container {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    width:50%;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+.entry-content p{
+    display:block;
+    margin-top:20px;
+    width: 80%;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+.entry-content img{
+    display:block;
+    margin-top:20px;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+}
