--- a/cw.css
+++ b/cw.css
@@ -150,6 +150,8 @@
 .entry-content img{
     display:block;
     margin-top:20px;
+    width: 80%;
+    height: auto;
     justify-content: center;
     align-items: center;
     margin-left: auto;
