--- a/scratchpad/grid.css
+++ b/scratchpad/grid.css
@@ -1,21 +1,39 @@
 .scratchpad {
     display: flex;
+    width: 50%;
     flex-direction: column;
-    justify-content: space-around;
     align-items: center;
-    width: 40%;
+    box-shadow: 1px 1px 5px rgb(199, 199, 199);
+    min-height: 300px;
+   
+}
+.sheet {
+    width: 100%;
+    height: 85%;
     margin: 0;
+}
+.text-input-container {
+    position: relative;
+    display: block;
+    width: 100%;
+}
+.text-input {
+    width: 95%;
+    border: none; 
+    border-radius: 5px;
+    outline: none; 
+    font-size: 16px; 
+    overflow: hidden; 
+    resize: none; 
+    min-height: 150px;
 }
 .content-selector {
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    width: 40%;
-    margin: 0;
+    width: 75%;
+    margin-bottom: 10px;
 }
 .multi-box-container {
-    margin-top: 20px;
+
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -26,6 +44,7 @@
     aspect-ratio: 1 / 1;
     background-color: rgba(211, 211, 211, 0.2); 
     border: 5px dotted rgba(169, 169, 169, 0.2); 
+    border-radius: 15%;
     position: relative;
     transition: background-color 0.3s, border-color 0.3s;
     margin: 0 1%; 
@@ -41,24 +60,9 @@
 }
 
 
-.text-input-container {
-    position: relative;
-    top: 10px;
-    display: block;
-    width: 100%;
-}
 
-.text-input {
-    width: 100%;
-    height: 150px;
-    border: none; 
-    padding: 8px; 
-    outline: none; 
-    font-size: 16px; 
-    overflow: hidden; 
-    resize: none; 
-}
 
+/*new content area */
 .content-area-container {
     display: flex;
     justify-content: space-between;
