--- a/scratchpad/grid.css
+++ b/scratchpad/grid.css
@@ -1,31 +1,43 @@
+
+
 .scratchpad {
     display: flex;
-    width: 50%;
+    width: 60%;
+    margin-left: 20%;
+    margin-right: 20%;
     flex-direction: column;
     align-items: center;
-    box-shadow: 1px 1px 5px rgb(199, 199, 199);
     min-height: 300px;
-   
+    border: 2px solid black;
+    border-radius: 10px;
+    background-color: rgba(245, 245, 245, 0.75);
+    margin-bottom: 10px;
+    
 }
 .sheet {
     width: 100%;
     height: 85%;
+    align-items: center;
     margin: 0;
 }
 .text-input-container {
     position: relative;
-    display: block;
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
     width: 100%;
 }
 .text-input {
     width: 95%;
-    border: none; 
+    border: 2px solid black; 
     border-radius: 5px;
     outline: none; 
     font-size: 16px; 
     overflow: hidden; 
     resize: none; 
-    min-height: 150px;
+    height: auto;
+    background-color: rgba(255, 255, 255, 1);
 }
 .content-selector {
     display: flex;
@@ -42,47 +54,111 @@
     width: 30%;
     height: auto;
     aspect-ratio: 1 / 1;
-    background-color: rgba(211, 211, 211, 0.2); 
-    border: 5px dotted rgba(169, 169, 169, 0.2); 
-    border-radius: 15%;
+    background-color: rgba(211, 211, 211, .75); 
+    border: 5px dotted rgba(128, 128, 128, .75); 
+    border-radius: 15px;
     position: relative;
     transition: background-color 0.3s, border-color 0.3s;
     margin: 0 1%; 
     box-sizing: border-box;
 }
 .multi-box:hover {
-    background-color: #d3d3d3; 
-    border-color: #a9a9a9; 
+    background-color: rgba(169, 169, 169, 0.75); 
+    border-color: rgba(47, 79, 79, 0.75); 
 }
 .multi-box.clicked {
-    background-color: #d3d3d3;
-    border-color: #a9a9a9;
+    background-color: rgba(169, 169, 169, 0.75); 
+    border-color: rgba(47, 79, 79, 0.75); 
 }
-
-
 
 
 /*new content area */
 .content-area-container {
+    position: relative;
     display: flex;
     justify-content: space-between;
     width: 100%;
 }
 .content-area-30 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     width: 30%;
     height: auto;
     aspect-ratio: 1 / 1;
-    background-color: blue;
+    background-color: rgba(211, 211, 211, .75); 
+    border: 5px dotted rgba(128, 128, 128, .75); 
+    border-radius: 15px;
+    transition: background-color 0.3s, border-color 0.3s;
+    margin-left: 1%;
+    margin-right: 1%;
 }
+.content-area-30:hover {
+    background-color: rgba(169, 169, 169, 0.75); 
+    border-color: rgba(47, 79, 79, 0.75); 
+}
+
 .content-area-60 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     width: 60%;
     height: auto;
-    aspect-ratio: 1 / 1;
-    background-color: orange;
+    background-color: rgba(211, 211, 211, .75); 
+    border: 5px dotted rgba(128, 128, 128, .75); 
+    border-radius: 15px;
+    transition: background-color 0.3s, border-color 0.3s;
+    margin-left: 1%;
+    margin-right: 1%;
 }
+.content-area-60:hover {
+    background-color: rgba(169, 169, 169, 0.75); 
+    border-color: rgba(47, 79, 79, 0.75); 
+}
+
 .content-area-90 {
-    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     height: auto;
-    aspect-ratio: 1 / 1;
-    background-color: green;
+    aspect-ratio: 3 / 1;
+    background-color: rgba(211, 211, 211, .75); 
+    border: 5px dotted rgba(128, 128, 128, .75); 
+    border-radius: 15px;
+    transition: background-color 0.3s, border-color 0.3s;
+    margin-left: 1%;
+    margin-right: 1%;
+}
+.content-area-90:hover {
+    background-color: rgba(169, 169, 169, 0.75); 
+    border-color: rgba(47, 79, 79, 0.75); 
+}
+
+
+.media-type-selector {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+.image-input {
+    font-size: 16px;
+    color: rgba(47, 79, 79, 0.75); 
+    display: none;
+}
+.image-button {
+    font-size: 16px;
+    color: rgba(47, 79, 79, 0.75); 
+}
+.image-button:hover {
+    color:rgba(0, 255, 255, .75);
+}
+.text-button {
+    font-size: 16px;
+    color: rgba(47, 79, 79, 0.75);
+}
+.text-button:hover {
+    color:rgba(0, 255, 255, .75);
 }
